fix: trying to make it so it does not show up dark while on dark mode on snapchat

--- a/index.css
+++ b/index.css
@@ -1,3 +1,8 @@
+html 
+{
+    color-scheme: light;
+}
+
 #header {
     width: 34em;
     border-bottom: 2px gray solid;
